tests/baselines/reference/for-of39.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of39.ts(1,20): error TS2322: Type '(string | boolean)[]' is not assignable to type '[string, boolean]'.
  Property '0' is missing in type '(string | boolean)[]'.
tests/cases/conformance/es6/for-ofStatements/for-of39.ts(1,37): error TS2322: Type 'number' is not assignable to type 'boolean'.


==== tests/cases/conformance/es6/for-ofStatements/for-of39.ts (2 errors) ====
    var map = new Map([["", true], ["", 0]]);
                       ~~~~~~~~~~
!!! error TS2322: Type '(string | boolean)[]' is not assignable to type '[string, boolean]'.
!!! error TS2322:   Property '0' is missing in type '(string | boolean)[]'.
!!! related TS6501 /.ts/lib.es5.d.ts:1125:5: The expected type comes from this index signature.
                                        ~
!!! error TS2322: Type 'number' is not assignable to type 'boolean'.
    for (var [k, v] of map) {
        k;
        v;
    }